--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <h4>The Odin Project</h4>
     <h1>Rock, Paper, Scissors!</h1>
     <p>The first player to five wins.</p>
     <div>
